feat:Cambiar el color de fondo de la cabecera de la tabla Consultations #8
He modificado el index.js para que el fondo de la cabecera de la tabla de Consultations sea verde claro cuando estás registrado como owner

Refs #8

--- a/frontend/src/static/css/owner/consultations.css
+++ b/frontend/src/static/css/owner/consultations.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #85fc85 !important; 
-}
 
 .consultation-checkbox-container{
     display: flex;
@@ -95,7 +92,7 @@ body {
   position: absolute;
   line-height: 2em;
   font-weight: bold;
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   top: 0;
   left: 0;
