--- a/frontend/src/static/css/owner/petList.css
+++ b/frontend/src/static/css/owner/petList.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #f5deb3;
 }
 
 .pet-list-title{
