feat: Extensiones basadas en Api
He añadido dos simulaciones de llamadas a 2 API

Refs #163

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn-blue {
+  background-color: rgb(0, 146, 156);
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.btn-green {
+  background-color: rgb(16, 123, 61);
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
